[gd_scene load_steps=2 format=3 uid="uid://bqh4oevhboev5"]

[ext_resource type="Script" path="res://scripts/components/attack_component.gd" id="1_ou2eq"]

[node name="AttackComponent" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_ou2eq")

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
